ENH: #HP-54 샤시 할인률 적용 추가